--- a/src/_app/styles/_global.scss
+++ b/src/_app/styles/_global.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   font-size: 1.4rem;
+  overflow-x: hidden;
 }
 
 html, body {
@@ -16,4 +17,5 @@ html, body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
