--- a/src/widgets/appHeader/ui/AppHeader/classes.module.scss
+++ b/src/widgets/appHeader/ui/AppHeader/classes.module.scss
@@ -4,14 +4,15 @@
   "left main right"
   ;
   grid-template-columns: 1fr auto 1fr;
+  gap: 2.4rem;
 
   .left {
     grid-area: left;
-    justify-self: start;
+    justify-self: end;
   }
   .right {
     grid-area: right;
-    justify-self: end;
+    justify-self: start;
   }
   .main {
     grid-area: main;
